# global-signal-workshop-tutes

./: README.md  byod_template.ipynb  data_flagging.ipynb  data_loading_writing.ipynb  data_loading_writing_RHINO_data.ipynb  modeling_and_averaging.ipynb  pyproject.toml  simulation_data.ipynb
