[project]
name = "workshop-notes"
version = "0.1.0"
description = "Tutorial notebooks for the 2026 Global Signal data Analysis Workshop"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "edges-analysis>=8.3.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pygsdata>=0.3.1",
    "read-acq>=1.2.0",
]

[tool.uv]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

